# charity_project

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_05_2032-4a75ea3edc6d_create_project_table.py  2024_07_09_1718-ca37abb8923f_create_users_table.py  2024_07_10_1823-a73d7223ab63_create_donate_table.py  2024_07_12_1934-30cc43a4da0d_change_additional_fields_in_user_to_.py
app/: main.py
app/alembic/: env.py
app/api/: __init__.py  invest_logic.py  routers.py  validators.py
app/api/endpoints/: __init__.py  donate.py  google.py  projects.py  users.py
app/core/: base.py  config.py  db.py  google_client.py  init_superuser.py  users.py
app/crud/: __init__.py  base.py  donate.py  projects.py
app/models/: __init__.py  donations.py  projects.py  users.py
app/schemas/: projects.py
app/services/: google_api.py
charity_project_app/: main.py
charity_project_app/api/: routers.py  validators.py
charity_project_app/api/endpoints/: __init__.py  donate.py  projects.py  users.py
charity_project_app/core/: base.py  config.py  db.py  init_superuser.py  users.py
charity_project_app/crud/: __init__.py  base.py  donate.py  projects.py
charity_project_app/models/: __init__.py  donations.py  projects.py  users.py
charity_project_app/schemas/: __init__.py  donate.py  projects.py  users.py
tests/: conftest.py  test_a_permissions.py  test_donate.py  test_invest_distribution.py  test_permissions.py  test_project.py
tests/fixtures/: data.py  user.py
